# algorithms-and-datastructures

./: .gitignore  README.md  flake.nix
cormen2022introduction/Getting-Started/: insertion_sort.cpp  merge_sort.cpp  merge_sort.py  selection_sort.cpp
okasaki1999purely/impl/: .gitignore  LICENSE  flake.nix  hs-example.cabal
okasaki1999purely/impl/app/: Main.hs
okasaki1999purely/impl/src/: Lib.hs
okasaki1999purely/impl/test/: LibSpec.hs
